Fix nav bar issue on smaller screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -615,3 +615,22 @@ footer{
     grid-template-columns: 1fr;
   }
 }
+
+@media (max-width: 768px){
+
+  nav{
+    flex-direction: column;
+    gap: 15px;
+    padding: 20px;
+  }
+
+  nav ul{
+    position: static;
+    transform: none;
+
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+  }
+
+}
